examples/datalog/08_negation/24_circular_negation_detection_error.dl.out
Executing script: examples/datalog/08_negation/24_circular_negation_detection_error.dl

> .db create test_circular_neg
Database 'test_circular_neg' created.
Switched to database: test_circular_neg
> .db use test_circular_neg
Switched to database: test_circular_neg
> +base[(1), (2), (3)].
Inserted 3 facts into 'base'.
> +valid_neg(X) :- base(X), !base(2).
Rule 'valid_neg' registered.
> ?- valid_neg(X).
Script error: Line 14: Query execution failed: Negated predicate !base(...) shares no variables with positive predicates. Negation requires at least one shared variable.
